K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: villa-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: villa-backend

  template:
    metadata:
      labels:
        app: villa-backend

    spec:
      containers:
      - name: villa-backend
        image: santosh2585/villa-backend:latest

        ports:
        - containerPort: 8086
