K8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: villa-backend-service
  namespace: default

spec:
  selector:
    app: villa-backend

  ports:
  - port: 80
    targetPort: 8086

  type: LoadBalancer
